lite-logger/log-management/objects/LogEntry__c/LogEntry__c.object-meta.xml
<CustomObject>
    <!-- Assigns LogEntry_Record_Page as the ORG DEFAULT record page. Without this
         override the FlexiPage exists but no user ever sees it. -->
    <description>Hot tier: recent log entries (default last 7 days) for reports, dashboards, and real-time triage. Aged into LogEntryArchive__b then deleted.</description>
    <label>Log Entry</label>
    <pluralLabel>Log Entries</pluralLabel>
    <nameField>
        <displayFormat>LE-{0000000000}</displayFormat>
        <label>Log Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>