lite-logger/log-management/objects/LogEntry__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>