lite-logger/log-management/objects/LogEntry__c/fields/LoggedBy__c.field-meta.xml
<CustomField>
    <fullName>LoggedBy__c</fullName>
    <label>LoggedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>LiteLog_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>