lite-logger/log-management/objects/LogEntry__c/fields/OriginLocation__c.field-meta.xml
<CustomField>
    <fullName>OriginLocation__c</fullName>
    <label>OriginLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>