lite-logger/log-management/objects/LogEntry__c/fields/TransactionEntryNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionEntryNumber__c</fullName>
    <label>TransactionEntryNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>