lite-logger/log-management/objects/LogEntry__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <label>UniqueId</label>
    <externalId>true</externalId>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>