lite-logger/log-management/objects/LogEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>LoggingLevel__c</columns>
    <columns>Message__c</columns>
    <columns>OriginLocation__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>Scenario__c</columns>
    <columns>Tags__c</columns>
    <columns>LoggedBy__c</columns>
    <columns>TransactionId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>